test/parser/ast/wildcard/wildcard_field_error.exp
Error: Unexpected token `_`, expected identifier
test/parser/ast/wildcard/wildcard_field_error.myte:4:6
 4 |   A.B._;
   |       ^